⚡ Bolt: Push stream filtering down to DB query in EventService
💡 What: Added `findActiveByUserAndEventId` to `ReservationRepository` that filters out `BLOCKED` status at the database level, replacing `findByUserAndEventId` + `stream().filter` in `EventService`.
🎯 Why: Fetching a large collection from the DB only to filter it down in-memory via Streams causes unnecessary data transfer, object allocations, and limits memory efficiency (an O(N) overhead problem).
📊 Impact: Reduces heap object allocation and memory footprint for large event reservation sets, preventing OOM / N+1 data fetch overhead.
🔬 Measurement: Profile heap allocation of `Reservation` instances in `EventService.getEventByIdForCurrentUser` before and after this optimization during a load test.